Bug 603821 - debug non-libxul builds fail in WebGLContext.cpp, with "Undefined reference to `mozilla::gl::GLContext::sCurrentGLContext'" - r=khuey, a=bustage